--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Scope+One" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
+        <script type="text/javascript" src="./qrcode-generator/qrcode.js"></script> 
+        <script type="text/javascript" src="./qrcode-generator/qrcode_UTF8.js"></script> 
         <script src="./bundle.js"></script>
+        <script type="text/javascript" src="./angular-qrcode/angular-qrcode.js"></script>
     </head>
     <body ng-app="app">
         <div ng-view></div>
