--- a/src/app-index.html
+++ b/src/app-index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="A real-time dashboard for your life.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Scope+One" rel="stylesheet">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./app-style.css">
         <script type="text/javascript" src="./qrcode-generator/qrcode.js"></script> 
         <script type="text/javascript" src="./qrcode-generator/qrcode_UTF8.js"></script> 
         <script src="./bundle.js"></script>
