Added speech recognition. OK View.

--- a/src/app-index.html
+++ b/src/app-index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="./qrcode-generator/qrcode_UTF8.js"></script> 
         <script src="./bundle.js"></script>
         <script type="text/javascript" src="./angular-qrcode/angular-qrcode.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     </head>
     <body ng-app="app">
         <div ng-view></div>
