--- a/src/app-index.html
+++ b/src/app-index.html
@@ -17,9 +17,12 @@
         <link rel="stylesheet" href="./app-style.css">
         <script type="text/javascript" src="./qrcode-generator/qrcode.js"></script> 
         <script type="text/javascript" src="./qrcode-generator/qrcode_UTF8.js"></script> 
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
         <script src="./bundle.js"></script>
         <script type="text/javascript" src="./angular-qrcode/angular-qrcode.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     </head>
     <body ng-app="app">
         <div ng-view></div>
