Added voice recognition button.

--- a/src/app-index.html
+++ b/src/app-index.html
@@ -24,6 +24,7 @@
         <script src="./bundle.js"></script>
         <script type="text/javascript" src="./angular-qrcode/angular-qrcode.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/speechkitt.min.js"></script>
     </head>
     <body ng-app="app">
         <div ng-view></div>
