--- a/src/app-index.html
+++ b/src/app-index.html
@@ -23,8 +23,7 @@
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
         <script src="./bundle.js"></script>
         <script type="text/javascript" src="./angular-qrcode/angular-qrcode.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/SpeechKITT/0.3.0/speechkitt.min.js"></script>
+        <script src="artyom.js/src/artyom.min.js"></script>
     </head>
     <body ng-app="app">
         <div ng-view></div>
