Changed to expanded artyom js.

--- a/src/app-index.html
+++ b/src/app-index.html
@@ -23,7 +23,7 @@
         <script src="https://www.gstatic.com/firebasejs/3.5.2/firebase-messaging.js"></script>
         <script src="./bundle.js"></script>
         <script type="text/javascript" src="./angular-qrcode/angular-qrcode.js"></script>
-        <script src="artyom.js/src/artyom.min.js"></script>
+        <script src="artyom.js/src/artyom.js"></script>
     </head>
     <body ng-app="app">
         <div ng-view></div>
